--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -16,11 +16,18 @@
 </SfToast>
 
 <div>
-    <div style="display:flex;align-items:start">
-        <SfAccordion Width="auto" LoadOnDemand="false" style="min-width:300px">
-            <AccordionItems>
-                <AccordionItem Header="Settings" Expanded="true">
-                    <ContentTemplate>
+    <div style="padding-bottom:2px">
+        <table style="background-color:#1F2937">
+            <thead>
+                <tr>
+                    <th style="color:#00B4F0;font-size:medium;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;padding-top:10px;padding-left:15px">Settings</th>
+                    <th style="color:#00B4F0;font-size:medium;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;padding-top:10px;padding-left:10px">Info</th>
+                </tr>
+
+            </thead>
+            <tbody>
+                <tr>
+                    <td style="padding:10px;margin-right:30px">
                         <table style="margin:10px;white-space:nowrap">
                             <thead>
                                 <tr>
@@ -36,32 +43,27 @@
                                 <tr><td><SfSwitch @bind-Checked="data.caseSensitive" /></td><td>Case sensitive search</td></tr>
                             </tbody>
                         </table>
-                    </ContentTemplate>
-                </AccordionItem>
-            </AccordionItems>
-        </SfAccordion>
-        <SfAccordion LoadOnDemand="false">
-            <AccordionItems>
-                <AccordionItem Header="Info" Expanded="true">
-                    <ContentTemplate>
-                        Enabling only extensions makes the search absolut. Meaning that only the specified extension will be searched for. <br />
-                        Example: You want to search for all txt files. Input only .txt in the search box, all other settings do not matter.<br />
-                        @* <s>
+                    </td>
+                    <td style="padding-left:10px;padding-right:30px;width:100%">
+                        <div style="font-size:15px">
+                            Enabling only extensions makes the search absolut. Meaning that only the specified extension will be searched for. <br />
+                            Example: You want to search for all txt files. Input only .txt in the search box, all other settings do not matter.<br />
+                            @* <s>
                         The pattern is relative, meaning that '.txt' will only find a file for example that does not have a name and ends with '.txt'. Entering '*.txt' however will search for all files ending with '.txt'. <br />
                         Entering 'nua*' will search for all files and folders containing the char set 'nua' at any point in the name. Like Manual -> Ma*nua*l.
                         </s> *@
-                        <br />
-                        <br />
-                        The search pattern is Regex based. <a href="https://regex101.com/" target="_blank">You can test and generate regex patterns here.</a><br />
-                        Tl:dr; writing only a word, for example 'test' will find all paths involing this word, regardless of upper or lower case and anywhere in the path. <br />
-                        It does not matter if the word has something before or after it. Writing 'subfolder*.*test' will find all paths that have at some point subfolder in it and AFTER it somewhere test. <br />
-                        The search will only search in paths if you enable the option, this will take a bit more time, but not that much more.
-                        <br />
-                        Search paths * is equal to the base path of the search: @searchService.SearchPath
-                    </ContentTemplate>
-                </AccordionItem>
-            </AccordionItems>
-        </SfAccordion>
+                            <br />
+                            The search pattern is Regex based. <a href="https://regex101.com/" target="_blank">You can test and generate regex patterns here.</a><br />
+                            Tl:dr; writing only a word, for example 'test' will find all paths involing this word, regardless of upper or lower case and anywhere in the path. <br />
+                            It does not matter if the word has something before or after it. Writing 'subfolder*.*test' will find all paths that have at some point subfolder in it and AFTER it somewhere test. <br />
+                            The search will only search in paths if you enable the option, this will take a bit more time, but not that much more.
+                            <br />
+                            Search paths * is equal to the base path of the search: @searchService.SearchPath
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <SfAccordion Width="auto" LoadOnDemand="false">
