--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -5,32 +5,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 
-<SfSidebar Width="250px" Animate="false" EnableGestures="false" @bind-IsOpen="SidebarToggle">
-    <ChildContent>
+<div style="width:250px">
+    <div class="nav-item px-3">
+        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <span class="oi oi-home" aria-hidden="true"></span> Search
+        </NavLink>
+    </div>
+    @if (IsValidUser())
+    {
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Search
+            <NavLink class="nav-link" href="settings">
+                <span class="oi oi-cog" aria-hidden="true"></span> Settings
             </NavLink>
         </div>
-        @if (IsValidUser())
-        {
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="settings">
-                    <span class="oi oi-cog" aria-hidden="true"></span> Settings
-                </NavLink>
-            </div>
-        }
-        <div class="nav-item px-3">
-            <a class="nav-link" href="https://github.com/Cryosys/SearchCacher" target="_blank">
-                <span class="oi bi-github" aria-hidden="true"></span> Issues &amp; Feedback
-            </a>
-        </div>
-
-        <div style="position:absolute;bottom:0;margin:10px;vertical-align:center;color:white">
-            <a href="https://github.com/Cryosys/SearchCacher/releases/tag/@ISearchService.Version" target="_blank"><u>Ver. @ISearchService.Version</u></a>
-        </div>
-    </ChildContent>
-</SfSidebar>
+    }
+    <div class="nav-item px-3">
+        <a class="nav-link" href="https://github.com/Cryosys/SearchCacher" target="_blank">
+            <span class="oi bi-github" aria-hidden="true"></span> Issues &amp; Feedback
+        </a>
+    </div>
+</div>
 
 <style>
     a:link {
