Added statistics for files in each root

--- a/Pages/Settings.razor
+++ b/Pages/Settings.razor
@@ -8,6 +8,8 @@
 @using System.Collections.ObjectModel
 @inject ISearchService SearchService
 
+<PageTitle>Settings</PageTitle>
+
 @if (!IsValidUser())
     return;
 
