--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -11,6 +11,11 @@
             <span class="oi oi-home" aria-hidden="true"></span> Search
         </NavLink>
     </div>
+    <div class="nav-item px-3">
+        <NavLink class="nav-link" href="statistics" Match="NavLinkMatch.All">
+            <span class="oi oi-graph" aria-hidden="true"></span> Statistics
+        </NavLink>
+    </div>
     @if (IsValidUser())
     {
         <div class="nav-item px-3">
